Sample/k8s/dframe-worker.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dframe-worker
  namespace: dev
  labels:
    app: dframe-worker
spec:
  replicas: 3
  selector:
    matchLabels:
      app: dframe-worker
  template:
    metadata:
      labels:
        app: dframe-worker
    spec:
      hostNetwork: true
      dnsPolicy: ClusterFirstWithHostNet
      containers:
        - name: worker
          image: harbor.k8s.home/stresstest/worker:latest
          imagePullPolicy: Always
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: "2"
              memory: 1Gi
          volumeMounts:
            - name: config
              mountPath: /app/appsettings.json
              subPath: appsettings.json
      volumes:
        - name: config
          configMap:
            name: dframe-worker-config
