Sample/k8s/dframe-controller.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dframe-controller
  namespace: dev
  labels:
    app: dframe-controller
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dframe-controller
  template:
    metadata:
      labels:
        app: dframe-controller
    spec:
      containers:
        - name: controller
          image: harbor.k8s.home/stresstest/controller:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 7312
              name: web-ui
            - containerPort: 7313
              name: worker-connect
          resources:
            requests:
              cpu: 50m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 512Mi
          volumeMounts:
            - name: config
              mountPath: /app/appsettings.json
              subPath: appsettings.json
            - name: results
              mountPath: /app/results
      volumes:
        - name: config
          configMap:
            name: dframe-controller-config
        - name: results
          emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: dframe-controller
  namespace: dev
spec:
  selector:
    app: dframe-controller
  ports:
    - name: web-ui
      port: 7312
      targetPort: 7312
    - name: worker-connect
      port: 7313
      targetPort: 7313
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: dframe-controller-lb
  namespace: dev
spec:
  selector:
    app: dframe-controller
  ports:
    - name: web-ui
      port: 80
      targetPort: 7312
    - name: worker-connect
      port: 7313
      targetPort: 7313
  type: LoadBalancer
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dframe-controller-ingress
  namespace: dev
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
spec:
  ingressClassName: nginx
  rules:
    - host: dframe-worker.k8s.home
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: dframe-controller
                port:
                  number: 7312
